--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.14",
     "@types/react-datepicker": "^6.2.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "framer-motion": "^10.16.4",
     "googleapis": "^161.0.0",
     "lucide-react": "^0.294.0",
-    "next": "15.0.0",
+    "next": "^15.5.4",
     "react": "^18.2.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "^18.2.0",
